syntax = "proto3";

option go_package = "./test";

//package test;

message AmendableTest{
    int32 testNumber = 1;
}

message AmendableResult{
  string message = 1;
}

service Test{
  rpc GetTestResult(AmendableTest) returns (AmendableResult){}
}
